first version of the working app

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <!-- Train Table ends -->
 
         <!-- Form Input begins -->
-        <form class="border">
+        <form class="border train-inputs">
             <div class="form-group p-2">
                 <label for="exampleFormControlInput1">Train Name</label>
                 <input type="text" class="form-control" id="train-name" >
