--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <!-- Insert Jumbotron -->
     <div class="container">
         <div class="jumbotron bg-dark text-white">
-            <h1 class="display-4 text-center">Insert train pun</h1>
-            <p class="lead text-center">Lets hope this schedule is right, or you could be late for work</p>
+            <h1 class="display-4 text-center">All Aboard!</h1>
+            <p class="lead text-center">Create a train and Send it!</p>
         </div>
         <!-- Train table starts here -->
         <table class="table">
@@ -35,7 +35,7 @@
                     <th scope="col">Minutes Away</th>
                 </tr>
             </thead>
-            <tbody id="rows-and-data-here">
+            <tbody id="rows-and-data-here" class="bg-light">
 
             </tbody>
         </table>
@@ -43,14 +43,14 @@
         <!-- Train Table ends -->
 
         <!-- Form Input begins -->
-        <form class="border train-inputs">
+        <form class="border train-inputs bg-light">
             <div class="form-group p-2">
                 <label for="exampleFormControlInput1">Train Name</label>
-                <input type="text" class="form-control" id="train-name" >
+                <input required type="text"  class="form-control" id="train-name">
             </div>
             <div class="form-group p-2">
                 <label for="exampleFormControlInput1">Destination</label>
-                <input type="text" class="form-control" id="train-destination" >
+                <input required type="text"  class="form-control " id="train-destination" >
             </div>
             <div class="form-group p-2">
                 <label for="exampleFormControlInput1">First Train time (HH:mm military time)</label>
